Changelog
---------

#### 0.5.0 (2011-08-09)

- implemented mark-action so it now works with modules (cebe)

#### 0.4.0 (2011-08-08)

- added confirm() method to EDbMigration (cebe)

#### 0.3.1 (2011-08-05)

- fixed a problem with finding new migrations (cebe)
- added base migration for every single module (cebe)
- fixed problem with history and down migration when --module parameter is set (cebe)
- added $moduleDelimiter property and replaced string function with multibyte versions (cebe)
- complete refactoring of basic functionality, more stability and more straight forward (cebe)

#### 0.1.0 (2011-08-04)

- Initial public release (cebe)
- module support for migrations
- extended execute() of CDbMigration with parameter $verbose