@@ -4,6 +4,7 @@ Changelog
 #### 0.5.0 (2011-08-09)
 
 - implemented mark-action so it now works with modules (cebe)
+- implemented to-action so it now works with modules (cebe)
 
 #### 0.4.0 (2011-08-08)
 
